--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -71,3 +71,6 @@ tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2.3.2"
 tauri-plugin-updater = "2"
+
+[dev-dependencies]
+tempfile = "3"
